<resources>
    <string name="app_name">android-demo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="mine">Mine</string>
    <string name="official_practice">Official Practice</string>
    <string name="third_lib">Third Lib</string>
    <string name="magic">Magic</string>
    <string name="setting">Setting</string>

    <string name="practice_animation">Animation</string>
    <string name="practice_animation_frame">Frame Animation</string>
    <string name="practice_animation_tween">Tween Animation</string>
    <string name="practice_animation_property">Property Animation</string>
    <string name="practice_animation_demo">Demo Animation</string>

</resources>
