<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/btn_animation_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/practice_animation_frame"/>

    <Button
        android:id="@+id/btn_animation_tween"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/practice_animation_tween"/>

    <Button
        android:id="@+id/btn_animation_property"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/practice_animation_property"/>

    <Button
        android:id="@+id/btn_animation_demo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/practice_animation_demo"/>

</LinearLayout>